# tophat

./: .gitignore  .gitmodules  Dockerfile  README.md  build.sh  pyproject.toml  requirements.txt  run.sh  test_client  test_client.c
html/: flag1.html  index.html  mine.html  robots.txt  wrangle.html
include/tophat/api/: client.h  common.h
include/tophat/devices/: digital_switch.h  neopixel.h  nfc_reader.h  printer.h
src/tophat/: run_server.py  test_client.py
src/tophat/api/: client.py  device.py  hat.py  message.py  pin.py  server.py
src/tophat/devices/: printer.py
src/tophat/devices/digital_switch/: __init__.py  _device_impl.py
src/tophat/devices/neopixel/: __init__.py  _device_impl.py  server.py
src/tophat/devices/nfc_reader/: __init__.py  _device_impl.py  reader.py  write_data.py
src/tophat/devices/printer/: __init__.py
src/tophat/devices/raw_socket/: __init__.py
src/tophat/hats/nfc_wrangler/: Dockerfile  README.md
src/tophat/hats/nfc_wrangler/src/: Makefile  nfc_wrangler.c
tophat/: run_server.py  test_client.py
tophat/api/: client.py  device.py  message.py  server.py
tophat/devices/: neopixel.py  nfc_reader.py  printer.py  printerdevice.py  speaker.py
tophat/devices/neopixel/: __init__.py  proxy.py  server.py  start_server.py
tophat/devices/nfc_reader/: __init__.py  reader.py  write_data.py
tophat/hats/nfc_wrangler/: Makefile
tophat/hats/nfc_wrangler/src/: nfc_wrangler.c
