[project]
name = 'tophat'
version = '1.0.0'
description = 'Code to run and manage Dockerized CTF-style challenges for HackMyHat.'
authors = [{name = 'Evan Hellman'}]
readme = 'README.md'
requires-python = '>= 3.10'
dynamic=['dependencies']

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}

[build-system]
requires = ['setuptools >= 61.0']
build-backend = 'setuptools.build_meta'
